WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182114
Fix crash when preconnecting while closing private browsing
https://bugs.webkit.org/show_bug.cgi?id=182114
Summary
Fix crash when preconnecting while closing private browsing
Alex Christensen
Reported
2018-01-25 11:16:36 PST
Fix crash when preconnecting while closing private browsing
Attachments
Patch
(1.70 KB, patch)
2018-01-25 11:18 PST
,
Alex Christensen
joepeck
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2018-01-25 11:18:31 PST
Created
attachment 332288
[details]
Patch
Joseph Pecoraro
Comment 2
2018-01-25 11:47:46 PST
Comment on
attachment 332288
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=332288&action=review
r=me
> Source/WebKit/NetworkProcess/PreconnectTask.cpp:50 > ASSERT(networkSession);
We should probably remove this assert. Or make a better assert inside of the block, since it sounds like we have a series of events where we know this can happen.
Alex Christensen
Comment 3
2018-01-25 12:13:53 PST
trac.webkit.org/r227621
Radar WebKit Bug Importer
Comment 4
2018-01-25 12:14:22 PST
<
rdar://problem/36877885
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug