Fix crash when preconnecting while closing private browsing https://bugs.webkit.org/show_bug.cgi?id=182114 <rdar://problem/35637284>

Reviewed by Joseph Pecoraro.

* NetworkProcess/PreconnectTask.cpp:
There is a race condition when destroying a session while a page is initiating a preconnect.
If this happens, fail gracefully instead of trying to preconnect with a null session.



Canonical link: https://commits.webkit.org/197954@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227621 268f45cc-cd09-0410-ab3c-d52691b4dbfc